Added animations with 2 methods :video_camera:

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animations</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="dropdown">V</div>
+    <div class="animated animated-first"></div>
+    <div class="animated animated-second"></div>
+    <div class="animated animated-third"></div>
+    <div class="animated animated-fourth"></div>
+
 </body>
 </html>
